fixed spacing around home page logo - myText class

--- a/client/app/Map/homeMap.css
+++ b/client/app/Map/homeMap.css
@@ -30,9 +30,10 @@ h1 {
     /*background-image: url("photos/BondfireLogo.png");*/
     height:120px;
     padding:10px;
+    padding-top: 50px;
     color:#fff;
-    overflow:auto;
-    margin:10px;
+    /*overflow:auto;*/
+    margin:35px;
     text-align: center;
 }
 .mapload {
